# BRKXAR-2032-2026-test-automation

./: .env.example  .gitignore  Makefile  README.md  completed_issues.yaml  issues.yaml  needs_criteria_issues.yaml  needs_review_issues.yaml  pyproject.toml  ready_for_script_creation_issues.yaml
.claude/commands/: test-case-extractor.md
jobs/: __init__.py  utils.py
parameters/: ACTION-NORMALIZE-R1-GI2.json  ACTION-SHUT-R1-GI2.json  BGP-SUMMARY-ROUTER-ID.json  OSPF-NEIGHBOR-EXISTENCE.json  OSPF-NEIGHBOR-INTERFACE-post-shutdown.json  OSPF-NEIGHBOR-INTERFACE.json  OSPF-NEIGHBOR-PRIORITY.json  OSPF-NEIGHBOR-STATE.json  VERSION-HOSTNAME.json  VERSION-PLATFORM.json  VERSION-SERIAL-NUMBER.json  VERSION-UPTIME-INCREASED.json
physical-testbed/: testbed.yaml
physical-testbed/parameters/: ACTION-NORMALIZE-TACR1-R2-LINK.json  ACTION-SHUT-TACR1-R2-LINK.json  BGP-SUMMARY-NEIGHBOR-EXISTENCE.json  BGP-SUMMARY-NEIGHBOR-REMOTE-AS.json  BGP-SUMMARY-NEIGHBOR-STATE.json  BGP-SUMMARY-ROUTER-ID.json  GATE-NORMAL-BGP-PEERING.json  GATE-NORMAL-OSPF-NEIGHBOR-ADJACENCY.json  GATE-R1-R2-LINK-SHUTDOWN-OSPF-NEIGHBOR-ABSENT.json  INTERFACE-EXISTENCE-post-shutdown.json  INTERFACE-EXISTENCE.json  OSPF-NEIGHBOR-EXISTENCE-post-shutdown.json  OSPF-NEIGHBOR-EXISTENCE.json  OSPF-NEIGHBOR-INTERFACE-post-shutdown.json  OSPF-NEIGHBOR-INTERFACE.json  OSPF-NEIGHBOR-PRIORITY-post-shutdown.json  OSPF-NEIGHBOR-PRIORITY.json  OSPF-NEIGHBOR-STATE-post-shutdown.json  VERSION-HOSTNAME.json  (+5 more)
test_plan/: reconciled-post-shutdown.yaml  scenarios.yaml
virtual-cml-testbed/: testbed.yaml
workspace/: testbed.yaml
(+67 files in other folders)
